--- a/config.rb.dist
+++ b/config.rb.dist
@@ -5,12 +5,12 @@ module Greylist
     @values = {      
       :greylisting_delay   => 5,                                 # Minutes until a resent message is accepted
       :graylisting_max_age => 10080,                             # Minutes until a resent message is no longer accepted
-      :whitelist_directory => '/var/lib/greylist/whitelist',
-      :greylist_directory  => '/var/lib/greylist/greylist',
-      :opt_in_directory    => '/var/lib/greylist/opt-in',
-      :socketfile          => '/var/run/greylist/greylist.sock',
-      :pidfile             => '/var/run/greylist/greylist.pid',
-      :logfile             => '/var/log/greylist/greylist.log',
+      :whitelist_directory => '/var/lib/greylist.rb/whitelist',
+      :greylist_directory  => '/var/lib/greylist.rb/greylist',
+      :opt_in_directory    => '/etc/greylist.rb/opt-in',
+      :socketfile          => '/var/run/greylist.rb/greylist.sock',
+      :pidfile             => '/var/run/greylist.rb/greylist.pid',
+      :logfile             => '/var/log/greylist.rb/greylist.log',
       :loglevel            => Logger::INFO,
     }
     
