To enable creation of working directories in /var, daemon now should be started prvileged, drops rights to configurable user afterwards

--- a/config.rb.dist
+++ b/config.rb.dist
@@ -11,6 +11,7 @@ module Greylist
       :socketfile          => '/var/run/greylist.rb/greylist.sock',
       :pidfile             => '/var/run/greylist.rb/greylist.pid',
       :logfile             => '/var/log/greylist.rb/greylist.log',
+      :user                => 'greylist'
       :loglevel            => Logger::INFO,
     }
     
